--- a/src/demo/views/info/info.ejs
+++ b/src/demo/views/info/info.ejs
@@ -10,11 +10,11 @@
 
 <body>
     <div id="root">
-        <%= require('@/demo/components/head.ejs')() %>
+        <%= require('@/components/head.ejs')() %>
         
         <div class="content">我是信息info</div>
 
-        <%= require('@/demo/components/foot.ejs')() %>
+        <%= require('@/components/foot.ejs')() %>
     </div>
 </body>
 
