--- a/src/weiyu/views/index/index.ejs
+++ b/src/weiyu/views/index/index.ejs
@@ -12,7 +12,7 @@
     <div id="root">
         <%= require('@/components/head.ejs')() %>
         
-        <div class="content">我是关于about5</div>
+        <div class="content">我是首页Index</div>
 
         <%= require('@/components/foot.ejs')() %>
     </div>
