--- a/src/weiyu/views/index/index.ejs
+++ b/src/weiyu/views/index/index.ejs
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="keywords" content="微羽科技,小程序制作,小程序,WeChat">
+    <meta name="description" content="微羽科技小程序制作">
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body>
-    <div id="root">
-        <%= require('@/components/head.ejs')() %>
-        
-        <div class="content">我是首页Index</div>
+<body data-spy="scroll" data-target=".navbar-collapse">
+<div id="loading">
+    <div class="cssload-coffee"></div>
+</div>
+<%= require('@/components/nav/nav.ejs')() %>
+<%= require('@/components/home/home.ejs')() %>
 
-        <%= require('@/components/foot.ejs')() %>
-    </div>
 </body>
 
 </html>
