--- a/src/views/index/index.ejs
+++ b/src/views/index/index.ejs
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
+    <meta name="keywords" content="小程序制作,小程序开发,微羽科技,WeChat">
+    <meta name="description" content="微羽科技小程序开发官网">
+    <title>微羽科技</title>
 </head>
 
 <body>
-    <div id="root">
-        <%= require('@/components/head.ejs')() %>
+<%= require('@/components/head.ejs')() %>
 
-        <div class="content">我是首页Index</div>
+<div class="content">我是首页Index</div>
 
-        <%= require('@/components/foot.ejs')() %>
-    </div>
+<%= require('@/components/foot.ejs')() %>
 </body>
 
 </html>
