--- a/src/components/foot.ejs
+++ b/src/components/foot.ejs
@@ -1,11 +1,4 @@
-
-
-
-
-
-
-<footer class="footer">
-    <p> 我是底部</p>
-
+<footer class="container text-center">
+    <span>Copyright &copy; 2017</span>
 </footer>
 
