--- a/src/components/head.ejs
+++ b/src/components/head.ejs
@@ -1,22 +1,24 @@
-
-
-
-<div class="navbar navbar-inverse">
-    <div class=" container">
-        <div class="navbar-header">
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="/">主页</a>
-                    </li>
-                    <li>
-                        <a href="/about">关于</a>
-                    </li>
-                    <li>
-                        <a href="/info">信息</a>
-                    </li>
+<!-- start navigation -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="row">
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand"><h1>微羽科技</h1></a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#home" class="smoothScroll">首页</a></li>
+                    <li><a href="#service" class="smoothScroll">服务案例</a></li>
+                    <li><a href="#about" class="smoothScroll">公司简介</a></li>
+                    <li><a href="#contact" class="smoothScroll">联系我们</a></li>
                 </ul>
             </div>
         </div>
     </div>
-</div>
+</nav>
+<!-- end navigation -->
