--- a/src/views/index/index.ejs
+++ b/src/views/index/index.ejs
@@ -10,11 +10,199 @@
     <title>微羽科技</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar-collapse" class="modal-open">
+<div id="loading">
+    <div class="cssload-coffee"></div>
+</div>
 <%= require('@/components/head.ejs')() %>
 
-<div class="content">我是首页Index</div>
+<!-- start home -->
+<section id="home" class="text-center">
+    <div id="carousel-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-generic" data-slide-to="2"></li>
+            <li data-target="#carousel-generic" data-slide-to="3"></li>
+        </ol>
 
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="<%= require('@/assets/img/banner/01.png') %>" class="center-block" alt="微信新生态">
+            </div>
+            <div class="item">
+                <img src="<%= require('@/assets/img/banner/02.png') %>" class="center-block" alt="...">
+            </div>
+            <div class="item">
+                <img src="<%= require('@/assets/img/banner/03.png') %>" class="center-block" alt="...">
+            </div>
+            <div class="item">
+                <img src="<%= require('@/assets/img/banner/04.png') %>" class="center-block" alt="...">
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
+<!-- end home -->
+<!-- start service -->
+<section id="service">
+    <div class="container">
+        <h3 class="text-center col-md-12 wow fadeInDown" data-wow-delay="2000">服务案例</h3>
+        <p class="text-center">
+            我们联合第三方服务供应商，以更多的选择满足你业务全面的需求</p>
+        </p>
+        <div class="row">
+            <div class="col-sm-4 col-xs-12 wow fadeInUp" data-wow-delay="3800">
+                <div class="case-wrap text-center" data-title="服装" data-demo="clothes">
+                    <img src="<%= require('@/assets/img/clothes.jpg') %>" alt="服装">
+                    <p class="case-hover hidden-xs">
+                        <span>服装</span>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-12 wow fadeInUp" data-wow-delay="3800">
+                <div class="case-wrap text-center" data-title="教育" data-demo="education">
+                    <img src="<%= require('@/assets/img/education.jpg') %>" alt="教育">
+                    <p class="case-hover hidden-xs">
+                        <span>教育</span>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-xs-12 wow fadeInUp" data-wow-delay="3800">
+                <div class="case-wrap text-center" data-title="养生" data-demo="health">
+                    <img src="<%= require('@/assets/img/health.jpg') %>" alt="养生">
+                    <p class="case-hover hidden-xs">
+                        <span>养生</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end service -->
+<!-- start about -->
+<section id="about">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 hidden-xs">
+                <div class="square">
+                    <h2>
+                        <span>公司简介</span>
+                    </h2>
+                    <p>
+                        微羽科技是一家快速发展的专业的软件服务商。目前我们专注于微信生态微信小程序服务，致力于为每个用户个体打造属于自己的品牌，通过微信小程序平台帮助用户将自己的商品线上线下相结合将自己推广营销出去。我们的服务不限于小程序的开发，而是为用户提供集代理申请、开发、平台维护、培训为一体的全方位服务。我们有专业的产品开发团队、长期的专业咨询服务和培训竭诚为客户提供优质服务。</p>
+                </div>
+            </div>
+            <div class="col-sm-7 col-xs-12 wow fadeInLeft" data-wow-delay="2000">
+                <h2>我们的优势</h2>
+                <h3>OUR ADVANTAGE</h3>
+                <div class="media wow fadeInLeft">
+                    <div class="media-left">
+                        <a href="javascript:;">
+                            <img class="media-object" src="<%= require('@/assets/img/zhuanzhu.png') %>" alt="专注">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">专注小程序领域</h4>
+                        <p>专注的力量，集中全部优势资源。</p>
+                    </div>
+                </div>
+                <div class="media wow fadeInLeft">
+                    <div class="media-left">
+                        <a href="javascript:;">
+                            <img class="media-object" src="<%= require('@/assets/img/zhuanye.png') %>" alt="专业">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">专业的开发团队</h4>
+                        <p>资深开发团队，提供最佳的解决方案。</p>
+                    </div>
+                </div>
+                <div class="media wow fadeInRight">
+                    <div class="media-left">
+                        <a href="javascript:;">
+                            <img class="media-object" src="<%= require('@/assets/img/dingzhi.png') %>" alt="定制">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">个性化定制</h4>
+                        <p>专注个体品牌，为每个客户个性化定制。</p>
+                    </div>
+                </div>
+                <div class="media wow fadeInRight">
+                    <div class="media-left">
+                        <a href="javascript:;">
+                            <img class="media-object" src="<%= require('@/assets/img/peixun.png') %>" alt="培训">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">免费的定期培训</h4>
+                        <p>为客户进行免费的定期微信小程序相关培训</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end about -->
+<!-- start contact -->
+<section id="contact">
+    <div class="container">
+        <div class="row">
+            <h3 class="text-center wow fadeInDown" data-wow-delay="2000">联系我们</h3>
+            <div class="col-md-offset-2 col-md-8 col-sm-12 text-center">
+                <p>您好，如有任何问题请联系我们，欢迎提交任何关于我们的问题和建议，我们将尽快回复您。<br>感谢您对我们的帮助。我们7*24小时竭诚为您服务​</p>
+            </div>
+            <div class="col-md-4 col-xs-12 text-center">
+                <!--<div class="media wow flipInX">
+                    <div class="media-left">
+                        <i class="glyphicon glyphicon-phone-alt"></i>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">联系电话</h4>
+                        <p>12345678901</p>
+                    </div>
+                </div>-->
+                <i class="glyphicon glyphicon-phone-alt"></i>&nbsp;
+                <span>010-5676666</span>
+            </div>
+            <div class="col-md-4 col-xs-12 text-center">
+                <i class="glyphicon glyphicon-phone"></i>&nbsp;
+                <span>13823450987</span>
+            </div>
+            <div class="col-md-4 col-xs-12 text-center">
+                <i class="glyphicon glyphicon-envelope"></i>&nbsp;
+                <span>weiyu@weiyu.com</span>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end contact -->
+<div class="modal" id="webApp" tabindex="-1" role="dialog" aria-labelledby="webAppLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close text-center" data-dismiss="modal" aria-label="Close"><span aria-hidden="true" class="glyphicon glyphicon-remove"></span></button>
+                <h4 class="modal-title text-center" id="webAppLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                <div id="posterTvGrid"></div>
+            </div>
+        </div>
+        <div class="cssload-box-loading"></div>
+    </div>
+</div>
 <%= require('@/components/foot.ejs')() %>
 </body>
 
