--- a/src/views/index/index.less
+++ b/src/views/index/index.less
@@ -1,14 +1,246 @@
 
-h1{
-  color: rgba(0,0,0,.8);
+@color: #0112C2;
+/* start home */
+h1 {
+  margin: 0;
 }
-footer {
-  font-weight: 900;
-  p{
-    color: rgba(0,0,0,.8);
+
+#home {
+  padding-top: 80px;
+  .item{
+    background-color: #0c00c9;
   }
 }
 
-body{
-  display: flex;
+/* end home */
+
+/* start about */
+#about {
+  background: url("./images/about_bg.jpg") no-repeat center;
+  background-size: cover;
+  min-height: 300px;
+  padding: 60px 0 60px 0;
+  color: #fff;
+}
+
+#about .media {
+  margin-bottom: 20px;
+}
+
+#about .square {
+  width: 500px;
+  height: 500px;
+  margin-top: 50px;
+  transform: translateX(80px);
+  border: 5px solid #fff;
+  padding: 60px 120px 20px 40px;
+}
+
+#about .square p {
+  line-height: 2.2;
+}
+
+#about h2,
+#about h3 {
+  font-weight: bold;
+}
+
+#about h3 {
+  margin-bottom: 20px;
+}
+
+#about h2 {
+  padding: 10px 0 10px 0;
+}
+
+#about h2 span {
+  display: block;
+  padding-bottom: 20px;
+}
+
+#about .col-sm-7 {
+  padding: 5% 0 0 20%;
+}
+
+#about p {
+  font-weight: 400;
+}
+
+@media (max-width: 767px) {
+  #about {
+    background: #000000;
+  }
+
+  #about .col-sm-7 {
+    padding: 0 30px;
+  }
+}
+
+/* end about */
+
+/* start service */
+#service {
+  min-height: 300px;
+  padding: 65px 0 80px 0;
+  background: url("./images/sercive_bg.png") no-repeat center;
+  background-size: cover;
+  .row{
+    margin-top: 40px;
+  }
+  .case-wrap {
+    position: relative;
+    overflow: hidden;
+    height: 250px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+    box-shadow: 0 2px 17px 0 rgba(0, 0, 0, 0.3);
+    &:hover {
+      img{
+        transform: scale(1.05);
+      }
+      cursor: pointer;
+    }
+    & > img {
+      max-width: 100%;
+      min-height: 100%;
+      transition: all .5s
+    }
+    & > p.case-hover {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      z-index: 9;
+      color: #fff;
+      background-color: rgba(0, 144, 253, 0.5);
+      font-weight: 700;
+      transition: all .5s;
+      span{
+        display: block;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        width: 100%;
+        text-align: center;
+        font-size: 22px;
+      }
+    }
+  }
+  h3 {
+    position: relative;
+    color: #333;
+    font-weight: bold;
+    letter-spacing: 1px !important;
+    padding-bottom: 20px;
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      margin-left: -25px;
+      width: 50px;
+      background: @color;
+      height: 5px;
+    }
+  }
+}
+
+#webApp {
+  /* 滚动条 */
+  ::-webkit-scrollbar-thumb:horizontal { /*水平滚动条的样式*/
+    width: 5px;
+    background-color: #ccc;
+    border-radius: 6px;
+  }
+  ::-webkit-scrollbar-track-piece {
+    background-color: #fff; /*滚动条的背景颜色*/
+    border-radius: 0; /*滚动条的圆角宽度*/
+  }
+  ::-webkit-scrollbar {
+    width: 5px; /*滚动条的宽度*/
+    height: 5px; /*滚动条的高度*/
+  }
+  ::-webkit-scrollbar-thumb:vertical { /*垂直滚动条的样式*/
+    //height: 50px;
+    background-color: #a8a8a8;
+    border-radius: 4px;
+    //outline: 2px solid #fff;
+    //outline-offset: -2px;
+    //border: 2px solid #fff;
+  }
+  ::-webkit-scrollbar-thumb:hover { /*滚动条的hover样式*/
+    //height: 50px;
+    background-color: #939393;
+    -webkit-border-radius: 4px;
+  }
+  &.modal {
+    width: 100%;
+    min-height: 100%;
+    overflow-x: hidden;
+    padding-right: 0 !important;
+    .modal-dialog {
+      width: 100% !important;
+      min-height: 100%;
+      background-color: rgba(255, 255, 255, .6);
+      margin: 0;
+      .modal-content {
+        border-radius: 0;
+        box-shadow: none;
+        border: none;
+        background-color: transparent;
+        .modal-header {
+          color: @color;
+          border-bottom-width: 0;
+          user-select: none;
+          h4 {
+            font-weight: 700;
+            font-size: 26px;
+          }
+          .close {
+            position: fixed;
+            z-index: 99;
+            right: 50px;
+            top: 50px;
+            width: 46px;
+            height: 46px;
+            padding: 7px;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            line-height: 32px;
+            color: #ff4a45;
+            opacity: 1;
+            outline: none;
+          }
+        }
+      }
+    }
+  }
+}
+
+/* end service */
+
+/* start contact */
+#contact {
+  background: #404040 url('./images/contact-bg.jpg') no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  color: #FFFFFF;
+  min-height: 200px;
+  padding: 40px 0 50px;
+  overflow: hidden;
+  .media-left {
+    font-size: 28px;
+    color: @color;
+  }
+  h3{
+    font-weight: bold;
+    letter-spacing: 1px !important;
+    padding-bottom: 30px;
+  }
+  p{
+    margin-bottom: 40px;
+  }
 }
