--- a/src/components/foot.ejs
+++ b/src/components/foot.ejs
@@ -1,4 +1,4 @@
 <footer class="container text-center">
-    <span>Copyright &copy; 2017</span>
+    <span>Copyright &copy; 2017 - 2018</span>
 </footer>
 
